<resources>
    <string name="app_name">مُعين</string>
    <string name="Medicine">الجانب الطبي</string>
    <string name="Technology">الجانب التكنولوجي</string>
    <string name="Law">الجانب القانوني</string>
    <string name="Socialworker">الجانب الاجتماعي</string>
    <string name="Ask">اقتراحات</string>
    <string name="EducationalSpecialist">الجانب التربوي</string>
    <string name="General">الطب العام</string>
    <string name="dentistry">طب الأسنان</string>
    <string name="smartphones">الهواتف الذكية</string>
    <string name="computer">اجهزة الحاسوب</string>
    <string name="Child">طفل</string>
    <string name="Famely">اسرة</string>
    <string name="CommercialLaw">القانون التجاري</string>
    <string name="ForensicLaw">القانون الشرعي</string>
    <string name="learningdifficulties">صعوبات التعلم</string>
    <string name="name">الاسم:</string>
    <string name="bio">السيرة الذاتية:</string>
    <string name="university">الضغوطات الجامعية</string>
    <string name="rating">التقييم</string>
    <string name="Twjihee">الثانوية العامة</string>
    <string name="facebook_app_id">807777896268448</string>
    <string name="fb_login_protocol_scheme">fb807777896268448</string>
    <string name="psychological_guidance">الارشاد النفسي</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
