<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiantbackcopy"
    tools:context="com.biscuit.mo3en.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:visibility="visible">

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="3">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/mid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="@color/cardview_light_background"
                            android:gravity="center"
                            app:cardBackgroundColor="@color/colorAccent"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="38dp"
                                    android:gravity="center"
                                    android:text="@string/Medicine"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="18sp" />

                                <Space
                                    android:layout_width="match_parent"
                                    android:layout_height="10dp" />

                                <ImageView
                                    android:layout_width="103dp"
                                    android:layout_height="84dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="20dp"
                                    android:src="@drawable/hospital" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/tech"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="@color/cardview_dark_background"
                            android:gravity="center"
                            app:cardBackgroundColor="@color/colorAccent"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="match_parent"
                                    android:layout_height="38dp"
                                    android:gravity="center"
                                    android:text="@string/Technology"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="18sp" />

                                <Space
                                    android:layout_width="match_parent"
                                    android:layout_height="10dp" />

                                <ImageView
                                    android:layout_width="103dp"
                                    android:layout_height="84dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="20dp"
                                    android:src="@drawable/computer" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"

                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/social"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="@color/cardview_dark_background"
                            android:gravity="center"
                            app:cardBackgroundColor="@color/colorAccent"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="38dp"
                                    android:layout_marginTop="0dp"
                                    android:gravity="center"
                                    android:text="@string/Socialworker"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="18sp" />

                                <Space
                                    android:layout_width="match_parent"
                                    android:layout_height="10dp" />

                                <ImageView
                                    android:layout_width="103dp"
                                    android:layout_height="84dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="20dp"
                                    android:src="@drawable/social" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/law"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="@color/cardview_dark_background"
                            android:gravity="center"
                            app:cardBackgroundColor="@color/colorAccent"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="38dp"
                                    android:layout_marginTop="0dp"
                                    android:gravity="center"
                                    android:text="@string/Law"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="18sp" />

                                <Space
                                    android:layout_width="match_parent"
                                    android:layout_height="10dp" />

                                <ImageView
                                    android:layout_width="103dp"
                                    android:layout_height="84dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="20dp"
                                    android:src="@drawable/law" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/help"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="#0ef892"
                            android:gravity="center"
                            android:visibility="gone"
                            app:cardBackgroundColor="@color/colorAccent"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="103dp"
                                    android:layout_height="84dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="20dp"
                                    android:src="@drawable/thinking" />

                                <Space
                                    android:layout_width="match_parent"
                                    android:layout_height="10dp" />

                                <TextView
                                    android:id="@+id/textView6"
                                    android:layout_width="match_parent"
                                    android:layout_height="38dp"
                                    android:layout_marginTop="0dp"
                                    android:gravity="center"
                                    android:text="@string/Ask"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="18sp" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/leran"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="#02f58c"
                            android:gravity="center"
                            app:cardBackgroundColor="@color/colorAccent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/EducationalSpecialist"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="18sp" />

                                <Space
                                    android:layout_width="match_parent"
                                    android:layout_height="10dp" />

                                <ImageView
                                    android:layout_width="103dp"
                                    android:layout_height="84dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_margin="20dp"
                                    android:src="@drawable/learn" />
                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                </LinearLayout>


            </GridLayout>


        </LinearLayout>


    </ScrollView>

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/DrawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorAccent"
                    android:minHeight="250dp"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

            </FrameLayout>

            <android.support.design.widget.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/nav_header"
                app:menu="@menu/nav_menu">

            </android.support.design.widget.NavigationView>

        </android.support.v4.widget.DrawerLayout>

    </RelativeLayout>


</RelativeLayout>